week01/styles/siteplan-basic.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Work Sans', sans-serif;
    color: black;
    background-color: whitesmoke;
    padding: .5rem;
    margin-bottom: 2rem;
}

header, h1 {
    font-family: 'Work Sans SemiBold 600', sans-serif;
    color: #f5f5f5;
    background-color: #646F58;
    margin-top: .75rem;
    padding-left: 1rem;
    padding-right: 1rem;
}

h2 {
    font-family: 'Work Sans Regular 400', sans-serif;
    color: #000000;
    background-color: #afbe8f;
    display: inline-block;
    padding-left: 1rem;
    padding-right: 1rem;
}

h3 {
    margin-top: .5rem;
    padding-left: 1rem;
}

p {
    font-family: 'Work Sans Light 300', sans-serif;
    margin-top: .5rem;
    padding-left: 1.5rem;
}

.heading {
    margin-top: 4rem;
}

img {
    margin: 0;
    padding: 0;
}

